chore:config-database-connection-and-docker-files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=#set as environment variable
+spring.datasource.username=#set as environment variable
+spring.datasource.password=#set as environment variable
