feat:add-redis-configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.datasource.url=#set as environment variable
 spring.datasource.username=#set as environment variable
 spring.datasource.password=#set as environment variable
+spring.cache.type=#set as environment variable
+spring.redis.host=#set as environment variable
+spring.redis.port=#set as environment variable
+redis.ttl.value=#set as environment variable
+debug=#set as environment variable
