--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,10 +8,17 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      redis:
+        condition: service_started
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/food-db
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=password
+      - SPRING_CACHE_TYPE=redis
+      - SPRING_DATA_REDIS_HOST=redis
+      - SPRING_REDIS_PORT=6379
+      - REDIS_TTL_VALUE=10
+      - DEBUG=false
   postgres:
     image: postgres:15
     volumes:
@@ -27,5 +34,15 @@ services:
       interval: 5s
       timeout: 10s
       retries: 3
+  redis:
+    image: redis:alpine
+    command: redis-server
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
+      interval: 1s
+      timeout: 3s
+      retries: 5
 volumes:
   pgdata:
